        - Automatically detect and use multi-column IN on recent versions of
          libsqlite: ... WHERE ( foo, bar ) IN ( SELECT foo, bar FROM ... )

    * Fixes
        - Fix silent failure to retrieve a primary key (RT#80283) or worse:
          returning an incorrect value (RT#115381) in case a rdbms-side autoinc
          column is declared as PK with the is_auto_increment attribute unset
        - Fix docs on how to properly use Moo(se) in ResultSet's, and fix a
          corner case of ->count not functioning properly when the old recipe
          was being used (GH#105)
        - Fix incorrect ::Storage->_ping() behavior under Sybase (RT#114214)
        - Work around breakage in Hash::Merge by soft-requiring Clone as part
          of the replicated subsystem (RT#124321)

    * Misc
        - DBIC_TRACE_PROFILE=... now uses a ::Storage::Statistics subclass
          DBIx::Class::Storage::Debug::PrettyTrace which properly ships as a
          part of this distrinbution
        - Switch out SQL::Abstract dependency with a slower moving dist
        - Remove Data::Page dependency by inlining its entirety into the core
          DBIx::Class::ResultSet::Pager (RT#130686)

0.082841 2018-01-29 08:10 (UTC)
    * Test-suite fixup changes only - no reason to upgrade, wait for 0.082850

    * Misc
        - Unblock DBD::SQLite (RT#118395)
        - Fix missing ORDER BY leading to failures of t/prefetch/grouped.t
          under upcoming libsqlite (RT#117271)
        - Temporarily disable a non-critical portion of test failing on
          upcoming libsqlite, proper fix coming in 0.082850 (RT#119845)
        - Add test workaround for ( largely irrelevant ) RT#120129
        - Add temporary test-workaround for a devrel of DBD::SQLite
          RT#124227 / https://twitter.com/dbix_class/status/957271153751527424
        - Add workaround for one of the most damaging "improvements" made
          during the modern-perl-era (RT#120827)